--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
          <table class="table mt-4">
-          <thead>
+          <thead >
             <tr style="background:rgb(210, 120, 104)" class="text-center  text-white ">
               <th scope="col">Card Nº</th>
               <th scope="col">Name</th>
@@ -67,7 +67,7 @@
               
             </tr>
           </thead>
-          <tbody>
+          <tbody v-if="infoUsers.length">
             <tr  style="background:rgb(232, 220, 220)" class="text-center text-dark" v-for="(info,i) in infoUsers" >
               <td v-text="info.cardNumber" ></td>
               <td v-text="info.name" ></td>
@@ -79,6 +79,14 @@
             </tr>
           
           </tbody>
+
+          <tbody v-else>
+            <tr>
+                <td class="text-center" colspan="5">
+                    Your workers list is empty
+                </td>
+            </tr>
+        </tbody>
         </table> 
 
 
